--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <artifactId>OnlinerBDT</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
+        <encoding>UTF-8</encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.resources.sourceEncoding>UTF-8</project.resources.sourceEncoding>
         <webdrivermanager.version>4.2.2</webdrivermanager.version>
         <cucumber.version>6.10.4</cucumber.version>
         <suiteFile>Runner.xml</suiteFile>
